--- a/examples/metrics-graphite/pom.xml
+++ b/examples/metrics-graphite/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-graphite</artifactId>
-            <version>${metrics.version}</version>
+            <version>4.2.15</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
